# armpno

./: Makefile  README.md
arm_vectorization/: CMakeLists.txt  Makefile  README.md  example_vector_addition_auto_vectorization.cc  no_vec.txt  vec.txt
chapter1/1.6.1/: Makefile  bubble_sort.c
chapter1/1.6.2/: Makefile  bubble_sort_asm.s
chapter1/1.6.3/: Makefile  bubble_sort.c  bubble_sort_asm.s  main.c
chapter1/1.9/: perf_event.c
chapter2/2.10/: Makefile  neon.c  neon_arm
chapter2/2.3/: Makefile  horner_method  horner_method.c  perf_event.c
chapter2/2.4/: Makefile  horner_method_omp.c  omp_atomic_sections.c  omp_barriers.c  omp_critical_sections.c  omp_locks.c  omp_scope.c
chapter2/2.8/: horner_method.c  horner_method_arm
chapter3/: image_transformation.c
cl_env/src/: HelloWorld.cpp
halide/armpno_blur/: .README.md.swp  Makefile  Makefile.hvx  Makefile.opencl  Makefile.test  README.md  blur_halide.pgm  mosaic.h  pmu_stats.txt  test-Blur-app  test.cpp  test.sh
